--- a/src/app/chameleon-reports/trauma-patients/trauma-graph/trauma-graph.component.html
+++ b/src/app/chameleon-reports/trauma-patients/trauma-graph/trauma-graph.component.html
@@ -1,4 +1,3 @@
-<div class="trauma-chart-wrap" [style.height.px]="height">
-    <canvas #canvasRef></canvas>
-  </div>
-  
+<div class="chart-wrap" [style.height.px]="height">
+  <canvas #canvasRef></canvas>
+</div>
