--- a/src/app/ServiceCRM/main-screen/main-screen.component.html
+++ b/src/app/ServiceCRM/main-screen/main-screen.component.html
@@ -35,6 +35,14 @@
     >
       <span class="button-text">ימי הולדת</span>
     </button>
+    <button
+    mat-raised-button
+    class="birthday-button"
+    routerLink="/AmbulatoryBirthdayUpdate"
+    [ngStyle]="{  }"
+  >
+    <span class="button-text"> - ימי הולדת אמבולטורי</span>
+  </button>
     </div>
   </div>
 </div>
