--- a/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
+++ b/src/app/MARAA/measurement-data-moshe/measurement-data-moshe.component.html
@@ -282,7 +282,12 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>מכנה</th>
           <td mat-cell *matCellDef="let row">{{ row.mechane }}</td>
         </ng-container>
-
+        <ng-container matColumnDef="avgTotalTimeInUnit">
+          <th mat-header-cell *matHeaderCellDef> זמן ממוצע ביחידה (דק׳) </th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.avgTotalTimeInUnit ?? '' }}
+          </td>
+        </ng-container>
         <ng-container matColumnDef="grade">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>אחוז</th>
           <td mat-cell *matCellDef="let row">
@@ -387,7 +392,12 @@
             {{ getTargetValue(row.measurementCode) ?? '-' }}%
           </td>
         </ng-container>
-
+        <ng-container matColumnDef="avgTotalTimeInUnit">
+          <th mat-header-cell *matHeaderCellDef> זמן ממוצע ביחידה (דק׳) </th>
+          <td mat-cell *matCellDef="let row">
+            {{ row.avgTotalTimeInUnit ?? '' }}
+          </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedDepartmentColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedDepartmentColumns;"></tr>
       </table>
